Fix \b chars in MATLAB notebook (RSS break).

--- a/content/notebooks/NMRLab 1D NMR processing (MATLAB).ipynb
+++ b/content/notebooks/NMRLab 1D NMR processing (MATLAB).ipynb
@@ -129,9 +129,9 @@
     {
      "data": {
       "text/plain": [
-       "{\bWarning: The value of local variables may have been changed to match the\n",
+       "{Warning: The value of local variables may have been changed to match the\n",
        "         globals.  Future versions of MATLAB will require that you declare\n",
-       "         a variable to be global before you use that variable.}\b \n",
+       "         a variable to be global before you use that variable.} \n",
        "> In /Users/mxf793/MATLAB/Toolbox/nmrlab/nmrlab_init.p>nmrlab_init at 14\n",
        "  In web_eval at 44\n",
        "  In webserver at 241\n",
@@ -4250,7 +4250,7 @@
     {
      "data": {
       "text/plain": [
-       "{\bWarning: 12 points left!}\b \n",
+       "{Warning: 12 points left!} \n",
        "> In /Users/mxf793/MATLAB/Toolbox/nmrlab/metabolab/spcbucket.p>spcbucket at 54\n",
        "  In web_eval at 44\n",
        "  In webserver at 241\n"
